[package]
name = "proxy-protocol"
version = "0.5.0"
authors = ["Gen0Sec <support@gen0sec.com>"]
edition = "2024"

license = "MIT OR Apache-2.0"
description = "PROXY protocol serializer and deserializer"
documentation = "https://docs.rs/proxy-protocol/"
repository = "https://github.com/gen0sec/proxy-protocol"
keywords = ["proxy", "proxy-protocol", "haproxy", "networking"]
categories = ["network-programming", "parser-implementations"]
links = "proxy-protocol"
readme = "README.md"

[package.metadata.release]
publish = false
tag-name = "v{{version}}"

[dependencies]
snafu = "~0.9"
bytes = "~1"

[dev-dependencies]
pretty_assertions = "^1.4"
rand = "~0.10"

[features]
default = []

always_exhaustive = []
